--- a/Lab Assignment-Mid/ShoppingCartMVC/Ch24ShoppingCartMVC/Ch24ShoppingCartMVC.csproj
+++ b/Lab Assignment-Mid/ShoppingCartMVC/Ch24ShoppingCartMVC/Ch24ShoppingCartMVC.csproj
@@ -131,6 +131,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\CartController.cs" />
+    <Compile Include="Controllers\CheckoutController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Global.asax.cs">
@@ -175,6 +176,7 @@
     </Compile>
     <Compile Include="Models\OrderModel.cs" />
     <Compile Include="Models\ViewModels\CartViewModel.cs" />
+    <Compile Include="Models\ViewModels\CheckoutViewModel.cs" />
     <Compile Include="Models\ViewModels\ContactViewModel.cs" />
     <Compile Include="Models\ViewModels\OrderViewModel.cs" />
     <Compile Include="Models\ViewModels\ProductViewModel.cs" />
@@ -304,6 +306,7 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="TempCSS\Cart.css" />
+    <Content Include="TempCSS\Checkout.css" />
     <Content Include="TempCSS\Home.css" />
     <Content Include="TempCSS\Main.css" />
     <Content Include="TempCSS\Order.css" />
@@ -324,6 +327,7 @@
     <Content Include="Views\Order\Index.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
+    <Content Include="Views\Checkout\Index.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
